##############################################################

import("//react-native/common.gni")

config("LibRnSpotify_config") {
  cflags_cc = [ "-std=c++17","-g"]
  cflags_cc += [
    "-Wno-extra-semi",
    "-Wno-sign-compare",
    "-Wno-header-hygiene",
  ]

  include_dirs = [ ".",
                  "//react-native/ReactCommon/",
                  ]
  defines = ["SKIASPOTIFY_PLATFORM_SKIA"]
}

rn_cxx_component("Rnspotify") {

  # RNS Native module and its dependencies
  sources = [
    "RNSpotifyRemoteAuthModule.cpp",
    "RNSpotifyRemoteAuthModule.h",
    "RNSpotifyRemoteAppModule.cpp",
    "RNSpotifyRemoteAppModule.h",
  ]

  # RNS Fabric Component and its dependencies
  #sources += [
  #]

  # Spotify C++ sources
  #sources += [
  #]

  defines = [
    "RNSPOTIFY_PLATFORM_SKIA",
  ]

  public_configs = [ ":LibRnSpotify_config" ]
  public_configs += [ "//build/secondary/folly:folly_config" ]
  deps = [
    "//folly",
    "//folly:async",
    "//folly:synchronization",
    "//skia",
    "//third_party/boost:headers_only",
    "//third_party/double-conversion:double-conversion",
    "//third_party/glog:glog",
  ]

  with_exceptions = true
  with_rtti = true
}
